--- a/双箭头2/index.html
+++ b/双箭头2/index.html
@@ -231,7 +231,7 @@
 <body>
     <header>
         <h1>双箭头2</h1>
-        <p class="subtitle">经典双人射击游戏 - 调整下方控制按钮改变游戏窗口大小</p>
+        <p class="subtitle">调整下方控制按钮改变游戏窗口大小</p>
         
         <div class="controls">
             <button id="fullscreen-btn" class="btn">全屏模式</button>
@@ -263,7 +263,7 @@
     </div>
     
     <footer>
-        <p>© 2023 双箭头2经典游戏 | 使用Ruffle播放器</p>
+        <p>美汁汁 | 你没玩过的船新版本</p>
     </footer>
 
     <script>
@@ -363,3 +363,4 @@
     </script>
 </body>
 </html>
+
