--- a/疯狂小人战斗/index.html
+++ b/疯狂小人战斗/index.html
@@ -230,7 +230,7 @@
 </head>
 <body>
     <header>
-        <h1>双箭头2</h1>
+        <h1>疯狂小人战斗</h1>
         <p class="subtitle">调整下方控制按钮改变游戏窗口大小</p>
         
         <div class="controls">
@@ -363,3 +363,4 @@
     </script>
 </body>
 </html>
+
