--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>致未来的你。</title>
+    <title>致未来的你</title>
     <style>
         *{
             margin:0px;
@@ -1840,4 +1840,5 @@
 
     <!-- <这次写到header3-list-square，问题是不显示，还有就是header2-font-list不显示的问题> -->
 </body>
+
 </html>
